--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>안녕하세요</h1>
+    <header>
+      <div class="inner">
+        <div class="head-container">  <!--head-container안에 내부컨텐츠는 아래 2개 div 이다.-->
+          <div>잔재미코딩</div>            
+          <div>잔재미코딩 블로그 모음</div>
+        </div>
+      </div>
+    </header>
+    <section>2</section>
+    <footer>3</footer>
   </body>
 </html>
