--- a/index.html
+++ b/index.html
@@ -68,15 +68,29 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- CSS class naming (BEM 명명규칙: Block Element Modifier 순으로 작성)
+    __ : ~ 의 하위 요소를(속해있는) 나타냄
+    -- : ~ 의 상태를 나타냄(수정한다 라는 느낌)
+    - : 단어와 단어사이는 하이픈 (BlueBox X, blueBox X, blue_box X, blue-box O)
+    예를 들어, box-container__title--blue 와 같이 작성할 수 있음 (참고로만 알아두면 됨)
+    -->
     <header>
       <div class="inner">
-        <div class="head-container">  <!--head-container안에 내부컨텐츠는 아래 2개 div 이다.-->
-          <div>잔재미코딩</div>            
-          <div>잔재미코딩 블로그 모음</div>
+        <div class="head-container">
+          <div class="head-brand">
+            <a href="https://fun-coding.org">잔재미코딩</a>
+          </div>
+          <!--head-container안에 내부컨텐츠는 아래 2개 div 이다.-->
+          <div class="head-blog">
+            <a href="https://fun-coding.org">잔재미코딩 블로그 모음</a>
+          </div>
+          <!-- 각 div들한테도 다른 css를 적용하기위해 class만듬-->
         </div>
       </div>
     </header>
-    <section>2</section>
+    <section class="main">
+      <div class="main-container"></div>
+    </section>
     <footer>3</footer>
   </body>
 </html>
