--- a/index.html
+++ b/index.html
@@ -51,11 +51,7 @@
 
     <!-- CSS Reset(1), 아이콘 폰트, 웹페이지 사용폰트, style.css , 브라우저마다 기본 스타일이 있어서 이걸 초기화-->
     <link rel="stylesheet" href="css/nomalize.css" />
-    <!-- https://fontawesome.com/start -->
-    <script
-      src="https://kit.fontawesome.com/f1def33959.js"
-      crossorigin="anonymous"
-    ></script>
+    
 
     <!-- 각자 pc에 설치된 font가 다르기 때문에 무료 웹font사용-->
     <link
@@ -66,6 +62,7 @@
 
     <!-- 사용할 css파일 -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/all.min.css" />  <!-- 웹폰트 다운로드해서 사용중-->
   </head>
   <body>
     <!-- CSS class naming (BEM 명명규칙: Block Element Modifier 순으로 작성)
@@ -88,9 +85,265 @@
         </div>
       </div>
     </header>
-    <section class="main">
-      <div class="main-container"></div>
+    <section class="main">       <!-- 이미지 추가를 위한 태그-->
+      <div class="main-container"> <!-- 이미지를 덮는 색 추가하기 위한 태그-->
+        <div class="inner">   <!-- title-container가 inner안에 들어가 있어서 화면을 늘려도 1200px를 넘지 않는다.-->
+          <div class="title-container">
+            <div class="title">안녕하세요 강의 실습입니다.</div>
+            <div class="message">
+              전자책보다 좋은 자료와 현업의 경험을 함께<br/>
+              검증된 온라인 강의를 <br>
+              검증된 온라인 플랫폼에서 제공합니다.
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
-    <footer>3</footer>
+    <section>
+      <div class="inner"> <!--inner안에 들어가 있어서 화면을 늘려도 1200px를 넘지 않는다.-->
+        <div class="skill-container"> <!-- 4개의 요소를 감싼 요소-->
+          <div class="skill">
+            <i class="fa-brands fa-python skill-icon python-style"></i>  <!-- skill안에 이미지들은 font awesome에서 가져온것들-->
+            <div class="skill-title">                       <!-- 아이콘하고 skill-title이 수평으로 정렬-->
+              <div class="skill-name">업무 자동화</div>
+              <div class="skill-usage">크롤링/자동매매</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-chart-bar skill-icon analysis-style"></i>  <!-- skill안에 이미지들은 font awesome에서 가져온것들-->
+            <div class="skill-title">                       <!-- 아이콘하고 skill-title이 수평으로 정렬-->
+              <div class="skill-name">데이터 분석</div>
+              <div class="skill-usage">데이터 분석/SQL</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-app-store-ios skill-icon ai-style"></i>  <!-- skill안에 이미지들은 font awesome에서 가져온것들-->
+            <div class="skill-title">                       <!-- 아이콘하고 skill-title이 수평으로 정렬-->
+              <div class="skill-name">AI</div>
+              <div class="skill-usage">인공지능 활용</div>
+            </div>
+          </div>
+          <div class="skill">
+            <i class="fa-brands fa-vuejs skill-icon vue-style"></i>  <!-- skill안에 이미지들은 font awesome에서 가져온것들-->
+            <div class="skill-title">                       <!-- 아이콘하고 skill-title이 수평으로 정렬-->
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹/앱 서비브</div>
+            </div>
+          </div>
+        </div> 
+      </div>
+    </section>
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container"> <!-- flex box가 필요, 정렬 및 반응형으로 만들기 위함-->
+            <div class="roadmap-title">잔재미코딩 관련 블로그 및 서적</div>
+            <div class="arrow-container">
+              <i class="fas fa-chevron-circle-left slide-prev" ></i>
+              <i class="fas fa-chevron-circle-right slide-next"></i>
+            </div>
+          </div> 
+          <ul class="class-list" data-potition="0">  <!-- ul 안에 요소들은 수평으로 정렬해야한다.-->
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <a href="http://school.fastcampus.co.kr/blog/all/113/" target="_blank">
+                <img src="https://www.fun-coding.org/style/images/blog.jpg" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+                <div class="class-container"> <!--이미지 아래 큰틀-->
+                  <div class="class-skill">
+                    <div class="class-type">학습방법</div>
+                    <div class="class-format">블로그</div>
+                  </div>
+                  <div class="class-desc">
+                    <div class="class-title">IT는 배우는 방법을 익혀야합니다</div>
+                    <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                  </div>
+                </div>
+              </a>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/broadIT3.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">누구나 쓱 읽고, 싹 이해하는 IT 핵심 기술</div>
+                  <div class="class-detail">입문자를 위한 IT 큰 그림 이해하기</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/pythonbook.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">왕초보를 위한 파이썬</div>
+                  <div class="class-detail">입문자를 위한 파이썬 프로그래밍</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/linuxbook.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">리눅스 커널 프로그래밍</div>
+                  <div class="class-detail">고급 개발자를 위한 리눅스 커널 분석과 개발</div>
+                </div>
+              </div>
+              <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+                <img src="https://www.fun-coding.org/style/images/linuxbook2.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+                <div class="class-container"> <!--이미지 아래 큰틀-->
+                  <div class="class-skill">
+                    <div class="class-type">출판서적</div>
+                    <div class="class-format">서적</div>
+                  </div>
+                  <div class="class-desc">
+                    <div class="class-title">리눅스 운영 체제의 이해와 개발</div>
+                    <div class="class-detail">고급 개발자를 위한 리눅스 커널 분석과 개발</div>
+                  </div>
+                </div>
+              </li>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container"> <!-- flex box가 필요, 정렬 및 반응형으로 만들기 위함-->
+            <div class="roadmap-title">데이터 분석/ 예측 로드맵 <span class="roadmap-desc">(데이터분석가/과학자 커리어 과정)</span></div>
+            <div class="arrow-container">
+              <i class="fas fa-chevron-circle-left slide-prev" ></i>
+              <i class="fas fa-chevron-circle-right slide-next"></i>
+            </div>
+          </div> 
+          <ul class="class-list" data-potition=0>  <!-- ul 안에 요소들은 수평으로 정렬해야한다.-->
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/blog.jpg" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">IT는 배우는 방법을 익혀야합니다</div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/broadIT3.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">누구나 쓱 읽고, 싹 이해하는 IT 핵심 기술</div>
+                  <div class="class-detail">입문자를 위한 IT 큰 그림 이해하기</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/pythonbook.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">왕초보를 위한 파이썬</div>
+                  <div class="class-detail">입문자를 위한 파이썬 프로그래밍</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/linuxbook.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">출판서적</div>
+                  <div class="class-format">서적</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">리눅스 커널 프로그래밍</div>
+                  <div class="class-detail">고급 개발자를 위한 리눅스 커널 분석과 개발</div>
+                </div>
+              </div>
+              <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+                <img src="https://www.fun-coding.org/style/images/linuxbook2.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+                <div class="class-container"> <!--이미지 아래 큰틀-->
+                  <div class="class-skill">
+                    <div class="class-type">출판서적</div>
+                    <div class="class-format">서적</div>
+                  </div>
+                  <div class="class-desc">
+                    <div class="class-title">리눅스 운영 체제의 이해와 개발</div>
+                    <div class="class-detail">고급 개발자를 위한 리눅스 커널 분석과 개발</div>
+                  </div>
+                </div>
+              </li>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container"> <!-- flex box가 필요, 정렬 및 반응형으로 만들기 위함-->
+            <div class="roadmap-title">데이터 분석/ 예측 로드맵 <span class="roadmap-desc">(데이터분석가/과학자 커리어 과정)</span></div>
+            <div class="arrow-container">
+              <i class="fas fa-chevron-circle-left slide-prev" ></i>
+              <i class="fas fa-chevron-circle-right slide-next"></i>
+            </div>
+          </div> 
+          <ul class="class-list" data-potition=0>  <!-- ul 안에 요소들은 수평으로 정렬해야한다.-->
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/blog.jpg" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">IT는 배우는 방법을 익혀야합니다</div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+            <li class="class-card"> <!--4개 중 각각 감싸는 큰틀-->
+              <img src="https://www.fun-coding.org/style/images/broadIT3.png" alt="잔재미코딩 블로그" class="class-image"> <!-- alt는 image가 없을때 나오는 텍스트-->
+              <div class="class-container"> <!--이미지 아래 큰틀-->
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <div class="class-format">블로그</div>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">누구나 쓱 읽고, 싹 이해하는 IT 핵심 기술</div>
+                  <div class="class-detail">입문자를 위한 IT 큰 그림 이해하기</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="inner">
+        <div class="footer-message">합리적인 분들과 좋은 컨텐츠가 지속될 수 있는 선순환 시스템을 지향합니다.</div>
+        <div class="footer-contact">컨택: wjdqudwo@gmail.com</div>
+        <div class="footer-copyright">Copyright 2025 01 27</div>
+      </div>
+    </footer>
+    <a id="backtotop" class="show"></a>
+    <script src="js/main.js"></script> 
   </body>
 </html>
